k8s/express-service.yml
apiVersion: v1
kind: Service
metadata:
  name: express-service
spec:
  type: ClusterIP
  selector:
    app: express
  ports:
    - port: 5000
      targetPort: 5000
