k8s/react-service.yml
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  type: ClusterIP
  selector:
    app: react
  ports:
    - port: 9000
      targetPort: 9000
